--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Book Catalog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body class="bg-light">
   <header class="bg-primary text-white p-4 mb-4">
@@ -23,74 +24,15 @@
   
   <main class="container">
     <div class="input-group mb-4">
-        <input type="text" id="searchInput" class="form-control" placeholder="Search for a book title...">
-        <button class="btn btn-outline-primary" id="clearButton">Clear</button>
+      <input type="text" id="searchInput" class="form-control" placeholder="Search for a book title...">
+      <button class="btn btn-outline-primary" id="clearButton">Clear</button>
     </div>
     <div class="d-flex justify-content-center flex-wrap gap-3 my-4">
-        <button class="btn btn-warning" id="highlightButton">Highlight long titles</button>
-        <button class="btn btn-secondary" id="resetButton">Reset Borders</button>
+      <button class="btn btn-warning" id="highlightButton">Highlight long titles</button>
+      <button class="btn btn-secondary" id="resetButton">Reset Borders</button>
     </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">The Great Gatsby</a></h2>
-          <p class="card-text">by F. Scott Fitzgerald</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">To Kill a Mockingbird</a></h2>
-          <p class="card-text">by Harper Lee</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">1984</a></h2>
-          <p class="card-text">by George Orwell</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">Pride and Prejudice</a></h2>
-          <p class="card-text">by Jane Austen</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">Moby-Dick</a></h2>
-          <p class="card-text">by Herman Melville</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">The Catcher in the Rye</a></h2>
-          <p class="card-text">by J.D. Salinger</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">The Hobbit</a></h2>
-          <p class="card-text">by J.R.R. Tolkien</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">Fahrenheit 451</a></h2>
-          <p class="card-text">by Ray Bradbury</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">Jane Eyre</a></h2>
-          <p class="card-text">by Charlotte Brontë</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="book card h-100 p-3 border border-2">
-          <h2><a href="#">Wuthering Heights</a></h2>
-          <p class="card-text">by Emily Brontë</p>
-        </div>
-      </div>
+
+    <div id="bookContainer" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
     </div>
   </main>
 
