Added all titles; divded book data and javascript functions that manipulate DOM into seperate files

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <p class="mb-0">&copy; 2023 Book Catalog Inc.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
