--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </header>
   
-  <main class="container">
+  <main class="container-fluid">
     <div class="input-group mb-4">
       <input type="text" id="searchInput" class="form-control" placeholder="Search for a book title...">
       <button class="btn btn-outline-primary" id="clearButton">Clear</button>
@@ -34,11 +34,11 @@
       <button class="btn btn-secondary" id="resetButton">Reset Borders</button>
     </div>
     -->
-
+<!-- 
     <div id="bookContainer" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-    </div>
+    </div> -->
+    <div id = "bookContainer"> </div>
   </main>
-
   <footer class="bg-dark text-white text-center py-3 mt-5">
     <p class="mb-0">&copy; 2023 Book Catalog Inc.</p>
   </footer>
@@ -46,3 +46,5 @@
   <script type="module" src="script.js"></script>
 </body>
 </html>
+
+      
