--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <ul class="nav">
             <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#Nonfiction" onclick="scrollWithOffset(event, 'Nonfiction')">Nonfiction</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#Fiction">Fiction</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#Horror">Horror</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#Mystery">Mystery</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#Romance">Romance</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#Fiction" onclick="scrollWithOffset(event, 'Fiction')">Fiction</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#Horror" onclick="scrollWithOffset(event, 'Horror')">Horror</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#Mystery" onclick="scrollWithOffset(event, 'Mystery')">Mystery</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#Romance" onclick="scrollWithOffset(event, 'Romance')">Romance</a></li>
           </ul>
         </nav>
       </div>
