--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-  <header class="bg-primary text-white p-4 mb-4 sticky-top">
+  <header class="text-white p-4 mb-4 sticky-top">
     <h1 class="mb-3 mb-md-0">Book Catalog</h1>
     <div class="d-inline-flex w-100">
       <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
