changed footer color

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div> -->
     <div id="bookContainer"> </div>
   </main>
-  <footer class="bg-dark text-white text-center py-3 mt-5">
+  <footer class="text-white text-center py-3 mt-5">
     <p class="mb-0">&copy; 2023 Book Catalog Inc.</p>
   </footer>
 
